# voxelis

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
ad-altum/: Cargo.toml
ad-altum/src/: main.rs
docs/: benches-raw.md  benches-tables.md  benches.md
meshing-debugger/: Cargo.toml
meshing-debugger/src/: main.rs
voxelis/: Cargo.toml
voxelis-bevy/: Cargo.toml
voxelis-bevy/examples/: greedy_meshing.rs  lod.rs
voxelis-bevy/src/: mesh.rs
voxelis-math/: Cargo.toml
voxelis-math/src/: lib.rs
voxelis-memory/: Cargo.toml  LICENSE-APACHE  README.md
voxelis-memory/src/: allocator_stats.rs  lib.rs  pool_allocator.rs  pool_allocator_lite.rs
voxelis-voxelize/: Cargo.toml
voxelis-voxelize/src/: lib.rs
voxelis/benches/: octree_bench.rs  svo_bench.rs  svodag_bench.rs  voxelize_bench.rs  voxelize_mesh.rs  voxtree_bench.rs
voxelis/src/: chunk.rs  export.rs  lib.rs  math.rs  model.rs  obj_reader.rs  svo.rs  voxelizer.rs  voxtree.rs  voxtree_iterator.rs  world.rs
voxelis/src/core/: batch.rs  block_id.rs  depth.rs  lod.rs  math.rs  max_depth.rs  mod.rs  traversal_depth.rs  voxel.rs
voxelis/src/interner/: consts.rs  hash.rs  macros.rs  mod.rs  stats.rs
voxelis/src/io/: consts.rs  export.rs  flags.rs  import.rs  mod.rs  obj_reader.rs  varint.rs
voxelis/src/spatial/: aabb2d.rs  mod.rs  octree.rs  vox_ops.rs  voxops.rs  voxtree.rs
voxelis/src/spatial/octree/: dag.rs  mod.rs  ops.rs  svo.rs
voxelis/src/storage/: mod.rs  node.rs
voxelis/src/storage/memory/: mod.rs  pool_allocator.rs  pool_allocator_lite.rs
voxelis/src/storage/node/: macros.rs  stats.rs
voxelis/src/utils/: common.rs  mesh.rs  mod.rs  shapes.rs
voxelis/src/voxel/: mod.rs  traits.rs  voxelizer.rs
voxelis/src/world/: chunk.rs  mod.rs  voxchunk.rs  voxmodel.rs  voxworld.rs
vtm-export/: Cargo.toml
vtm-export/src/: main.rs
vtm-viewer/: Cargo.toml
vtm-viewer/src/: main.rs
vtm-voxelize/: Cargo.toml
vtm-voxelize/src/: main.rs
