[workspace]
resolver = "3"
members = [
  "voxelis",
  "voxelis-bevy",
  "vtm-export",
  "vtm-viewer",
  "vtm-voxelize",
]
default-members = ["voxelis"]

[workspace.package]
version = "25.3.0"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
voxelis = { path = "voxelis" }
voxelis-bevy = { path = "voxelis-bevy" }

bitflags = "2.9.0"
byteorder = "1.5.0"
fastnoise-lite = "1.1.1"
glam = "0.29.3"
humanize-bytes = "1.0.6"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
md-5 = "0.10.6"
parking_lot = "0.12.3"
rand = { version = "0.9.0", features = ["small_rng"] }
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
wide = "0.7.32"
zstd = "0.13.3"

# Bevy & EGUI
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_panorbit_camera = { version = "0.25.0", features = ["bevy_egui"] }
# bevy_screen_diagnostics = "0.6.0"
egui_extras = "0.31.1"
egui_plot = "0.31.0"

# Enable a small amount of optimization in debug mode
# [profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release-debug-info]
inherits = "release"
debug = true

[profile.final]
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "fat"
debug = false
overflow-checks = false
# panic = "unwind"
