[workspace]
resolver = "3"
members = [
  "voxelis",
  "voxelis-math",
  "voxelis-memory",
  "voxelis-voxelize",
  "voxelis-bevy",
  "vtm-export",
  "vtm-viewer",
  "vtm-voxelize",
]
default-members = ["voxelis", "voxelis-memory"]

[workspace.package]
version = "25.4.0"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Sparse Voxel Octree DAG engine for building worlds, shaping matter, and mastering 3D space — powered by pure Rust."
homepage = "https://github.com/WildPixelGames/voxelis"
repository = "https://github.com/WildPixelGames/voxelis"
documentation = "https://docs.rs/voxelis"
readme = "README.md"
keywords = [
  "voxel",
  "voxel-engine",
  "sparse-voxel-octree",
  "svo",
  "dag",
  "3d-engine",
  "world-generation",
  "geometry",
  "compression",
  "graphics",
]
categories = [
  "data-structures",
  "game-development",
  "graphics",
  "rendering",
  "simulation",
]
rust-version = "1.86"

[workspace.dependencies]
voxelis = { path = "voxelis" }
voxelis-math = { path = "voxelis-math" }
voxelis-voxelize = { path = "voxelis-voxelize" }
voxelis-bevy = { path = "voxelis-bevy" }

ahash = "0.8.12"
bitflags = "2.9.1"
byteorder = "1.5.0"
crossbeam = { version = "0.8.4" }
fastnoise-lite = "1.1.1"
glam = "0.29.3"
humanize-bytes = "1.0.6"
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
log = { version = "0.4.27", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
md-5 = "0.10.6"
parking_lot = "0.12.4"
rand = { version = "0.9.2", features = ["small_rng"] }
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = "1.0.219"
wide = "0.7.33"
zstd = "0.13.3"

# Bevy & EGUI
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_panorbit_camera = { version = "0.25.0", features = ["bevy_egui"] }
# bevy_screen_diagnostics = "0.6.0"
egui_extras = "0.31.1"
egui_plot = "0.31.0"

# Enable a small amount of optimization in debug mode
# [profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release-debug-info]
inherits = "release"
debug = true
strip = "none"

[profile.final]
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "fat"
debug = false
overflow-checks = false
# panic = "unwind"
