[workspace]
resolver = "3"
members = [
  "voxelis",
  "voxelis-math",
  "voxelis-memory",
  "voxelis-voxelize",
  "voxelis-bevy",
  "vtm-export",
  "vtm-viewer",
  "vtm-voxelize",
]
default-members = ["voxelis", "voxelis-memory"]

[workspace.package]
version = "25.4.0"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Sparse Voxel Octree DAG engine for building worlds, shaping matter, and mastering 3D space — powered by pure Rust."
homepage = "https://github.com/WildPixelGames/voxelis"
repository = "https://github.com/WildPixelGames/voxelis"
documentation = "https://docs.rs/voxelis"
readme = "README.md"
keywords = [
  "voxel",
  "voxel-engine",
  "sparse-voxel-octree",
  "svo",
  "dag",
  "3d-engine",
  "world-generation",
  "geometry",
  "compression",
  "graphics",
]
categories = [
  "data-structures",
  "game-development",
  "graphics",
  "rendering",
  "simulation",
]
rust-version = "1.88"

[workspace.dependencies]
voxelis = { path = "voxelis" }
voxelis-math = { path = "voxelis-math" }
voxelis-voxelize = { path = "voxelis-voxelize" }
voxelis-bevy = { path = "voxelis-bevy" }

ahash = "0.8"
bitflags = "2.9"
byteorder = "1.5"
crossbeam = { version = "0.8" }
fastnoise-lite = "1.1"
glam = "0.29"
humanize-bytes = "1.0"
indicatif = { version = "0.18", features = ["improved_unicode"] }
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
md-5 = "0.10"
parking_lot = "0.12"
rand = { version = "0.9", features = ["small_rng"] }
rayon = "1.10"
rustc-hash = "2.1"
serde = "1.0"
tracy-client = "0.18"
wide = "0.7"
zstd = "0.13"

# Bevy & EGUI
bevy = "0.15"
bevy_egui = "0.33"
bevy_panorbit_camera = { version = "0.25", features = ["bevy_egui"] }
bevy_screen_diagnostics = "0.7"
egui_extras = "0.31"
egui_plot = "0.31"

# Enable a small amount of optimization in debug mode
# [profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release-debug-info]
inherits = "release"
debug = true
strip = "none"

[profile.final]
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "fat"
debug = false
overflow-checks = false
# panic = "unwind"
