[package]
name = "voxelis-bevy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
voxelis.workspace = true
# egui_extras.workspace = true
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
bevy_screen_diagnostics.workspace = true
bevy.workspace = true
egui_plot.workspace = true
fastnoise-lite.workspace = true
humanize-bytes.workspace = true
parking_lot.workspace = true
tracy-client = { workspace = true, optional = true }

[features]
default = ["memory_stats"]
memory_stats = ["voxelis/memory_stats"]
tracy = ["voxelis/tracy", "dep:tracy-client"]
