[package]
name = "voxelis"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[features]
default = ["numeric_voxel_impls"]
numeric_voxel_impls = []
memory_stats = []
debug_trace_ref_counts = []

[dependencies]
ahash.workspace = true
bitflags.workspace = true
byteorder.workspace = true
crossbeam.workspace = true
fastnoise-lite.workspace = true
glam.workspace = true
humanize-bytes.workspace = true
indicatif.workspace = true
log.workspace = true
md-5.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde.workspace = true
wide.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion2 = { version = "3.0.0" }

[[bench]]
name = "octree_bench"
harness = false
