[package]
name = "voxelis"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[features]
default = ["numeric_voxel_impls"]
numeric_voxel_impls = []
memory_stats = []
debug_trace_ref_counts = []

[dependencies]
voxelis-memory.workspace = true
bitflags.workspace = true
byteorder.workspace = true
glam.workspace = true
md-5.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
wide.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion2 = { version = "3.0.0" }
fastnoise-lite.workspace = true
rand.workspace = true

[[bench]]
name = "octree_bench"
harness = false
