[package]
name = "vtm-export"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
voxelis.workspace = true
tracy-client = { workspace = true, optional = true }

[features]
default = ["voxelis/vtm"]
tracy = ["dep:tracy-client", "voxelis/tracy"]
