[package]
name = "vtm-viewer"
version = "24.2.0"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
voxelis.workspace = true
bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
bevy_screen_diagnostics.workspace = true
bevy.workspace = true
egui_extras.workspace = true
log.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
