[package]
name = "vtm-viewer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
voxelis.workspace = true
voxelis-bevy.workspace = true

bevy_egui.workspace = true
bevy_panorbit_camera.workspace = true
bevy_screen_diagnostics.workspace = true
bevy.workspace = true
egui_extras.workspace = true
log.workspace = true
rayon.workspace = true
rustc-hash.workspace = true

[features]
memory_stats = ["voxelis/memory_stats"]
