[package]
name = "vtm-voxelize"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
voxelis.workspace = true
voxelis-voxelize.workspace = true
tracy-client = { workspace = true, optional = true }

[features]
default = ["memory_stats", "voxelis/vtm"]
memory_stats = ["voxelis/memory_stats", "voxelis-voxelize/memory_stats"]
tracy = ["voxelis/tracy", "voxelis-voxelize/tracy", "dep:tracy-client"]
